@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-26T08:29:38Z",
+  "timestamp" : "2022-08-26T16:32:47Z",
   "count_outdated" : 610,
   "uniques_outdated" : 47,
-  "count" : 632,
+  "count" : 630,
   "uniques" : 49,
   "views" : [
     {
       "timestamp": "2022-08-12T00:00:00Z",
-      "count": 6,
+      "count": 4,
       "count_minmax": [ 1, 7 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
