@@ -1,10 +1,10 @@
 {
-  "count": 22,
+  "count": 20,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-08-12T00:00:00Z",
-      "count": 6,
+      "count": 4,
       "uniques": 1
     },
     {
